# neuma

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
src/: App.tsx  Settings.tsx  Startup.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  arm64.cmake  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  ax.rs  cleanup.rs  commands.rs  downloader.rs  hotkey_listener.rs  lib.rs  lib.rs.bak  local_cleanup.rs  main.rs  pipeline.rs  settings.rs  transcribe.rs  tray.rs  typer.rs  window.rs
worker/: index.ts
