[package]
name = "neuma"
version = "0.1.8"
edition = "2021"

[lib]
name = "neuma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
whisper-rs = "0.11"
enigo = "0.2"
reqwest = { version = "0.12", features = ["json"] }
arboard = "3"
anyhow = "1"
log = "0.4"
tauri-plugin-log = "2"
webrtc-vad = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
whisper-rs = { version = "0.11", features = ["metal"] }
